<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/studfinder_bg"
    android:orientation="vertical"
    tools:context="org.bitanon.studfinder.StudFActivity">


    <org.bitanon.studfinder.StudFView
        android:id="@+id/studf_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp" />

    <TextView
    android:id="@+id/loading_textview"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:text="@string/wait_while_loading"
    android:background="@color/primary_dark"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/ui_panels_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <Button
                android:id="@+id/instrBut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onInstructionsButtonPushed"
                android:text="@string/menu_instructions"
                style="@style/materialButtStyle" />
            <Button
                android:id="@+id/hideAdsBut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRemoveAdsPushed"
                android:text="@string/remove_ads"
                style="@style/materialButtStyle" />

            <ToggleButton
                android:id="@+id/beeperBut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOn="@string/prefs_beeper_switch"
                android:textOff="@string/prefs_beeper_switch"
                style="@style/materialButtStyle"
                android:onClick="onBeeperToggled" />

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">

            <ToggleButton
                android:id="@+id/powerBut"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:textOn="@string/power_label"
                android:textOff="@string/power_label"
                style="@style/materialButtStyle" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/prefs_sensitivity_settings"/>

            <SeekBar
                android:id="@+id/sensitivityBar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="9"
                android:progress="9"/>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>